syntax = "proto3";

package io.mystore.stock.action;

import "kalix/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "io/mystore/stock/entity/stock_order_entity.proto";

service StockOrderToStockSkuItem {
  option (kalix.codegen) = {
    action : {}
  };

  rpc OnStockOrderCreated(stock.entity.StockOrderCreated)
      returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      event_sourced_entity : "stock_order"
    };
  }

  rpc IgnoreOtherEvents(google.protobuf.Any) returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      event_sourced_entity : "stock_order"
    };
  }
}
